# imageconstruct

./: CMakeLists.txt  README.md  main.cpp
Core/: Color.h  Map.h
Formats/: NetPBM.cpp  NetPBM.h  NetPGM16.cpp  NetPGM8.cpp  NetPGM8.h  NetPPM16.cpp  NetPPM8.cpp  NetPPM8.h
Images/: noise.ppm  third.pbm
src/: Generators.h  Opener.cpp  Opener.h  Utils.cpp  Utils.h  main.cpp
src/Core/: Color.h  Drawer.h  Filters.h  Generators.h  Kernel.h  KernelCollection.h  Map.h  Operators.h  TiledMap.h  types.h
src/Formats/: NetPBM.h  NetPGM16.cpp  NetPGM16.h  NetPGM8.cpp  NetPGM8.h  NetPPM16.h  NetPPM8.h
